--- a/README.mdx
+++ b/README.mdx
@@ -11,13 +11,13 @@ Welcome to the Comfy UI Workflow repository! Here, you'll find a collection of u
 **Tutorial 1:** In this tutorial, you'll embark on an exhilarating journey into the mesmerizing world of video generation with Comfy UI. Unlock the secrets to creating stunning animations and mind-bending visuals.
 
 ![Tutorial 2](https://github.com/camaerart/ComfyUI-Usefull-Workfrows/blob/main/ComfyUI_00005_.png)
-**Tutorial 2:** Discover the art of multiprompting, learn to craft your own magical animations, and witness the astonishing speed of Comfy UI in action.
+**Tutorial 2:** Discover the art of multiprompting, and efficient nodes  learn to craft your own magical animations, and witness the astonishing speed of Comfy UI in action.
 
 ![Tutorial 3](https://github.com/camaerart/ComfyUI-Usefull-Workfrows/blob/main/animate%20diff%20hoodie%20tutorial.png)
-**Tutorial 3:** This tutorial is designed as a supplement to the previous ones, offering further insights and techniques for advanced image and video generation.
+**Tutorial 3:** This tutorial is designed as a supplement to the previous ones, offering further insights and techniques for advanced multi lora image and video generation.
 
 ![Tutorial 4](https://github.com/camaerart/ComfyUI-Usefull-Workfrows/blob/main/robotic%20girl2410.png )
-**Tutorial 4:** Dive into the world of AI animation, where you can explore Hotshot-XL and AnimateDiff, two powerful motion modules that can bring your creative visions to life.
+**Tutorial 4:** Dive into the world of AI animation, where you can explore imate to video with the use of  AnimateDiff, two powerful motion modules that can bring your creative visions to life.
 
 ## System Requirements
 
@@ -49,6 +49,6 @@ Join the Comfy UI community on Discord to connect with other creative minds, sha
 
 ## Special Thanks
 
-A big thank you to the creators and contributors who have made this repository possible. Your dedication to advancing the field of AI animation is greatly appreciated.
+I want to special thanks someone 😔
 
 Explore the tutorials, unleash your creative potential, and create breathtaking animations with Comfy UI. We look forward to seeing your amazing work!
